--- a/src/components/projects/index.module.scss
+++ b/src/components/projects/index.module.scss
@@ -47,6 +47,7 @@
   .Projects {
     .card {
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
       align-items: center;
     }
