--- a/src/components/skillsTech/index.module.scss
+++ b/src/components/skillsTech/index.module.scss
@@ -1,8 +1,8 @@
 .Skills {
   display: flex;
   flex-direction: column;
-  margin: 30px;
-  padding: 30px;
+  margin: 10px 100px;
+  padding: 10px;
   background-color: #8f6e76;
   color: black;
 
