--- a/src/components/projects/index.module.scss
+++ b/src/components/projects/index.module.scss
@@ -1,24 +1,27 @@
 .Projects {
   margin: 10px;
-  padding: 20px;
+  padding: 40px;
 
   .card {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
+    align-items: center;
+    font-size: 11pt;
     gap: 10px;
   }
 
   .div {
     border: 1px solid whitesmoke;
-    background-color: rgba(245, 245, 245, 0.875);
+    background-color: rgba(255, 255, 255, 0.981);
     color: black;
     display: flex;
     flex-direction: column;
+    text-align: center;
     justify-content: center;
     align-items: center;
     gap: 20px;
-    height: 450px;
-    width: 300px;
+    height: 300px;
+    width: 230px;
     padding: 20px;
 
     img {
