--- a/src/components/projects/index.module.scss
+++ b/src/components/projects/index.module.scss
@@ -1,6 +1,6 @@
 .Projects {
   margin: 10px;
-  padding: 40px;
+  padding: 30px 10px;
 
   .card {
     display: flex;
@@ -20,9 +20,9 @@
     justify-content: center;
     align-items: center;
     gap: 20px;
-    height: 320px;
-    width: 230px;
-    padding: 40px;
+    height: 300px;
+    width: 210px;
+    padding: 30px;
 
     img {
       display: flex;
