--- a/src/components/data/index.module.scss
+++ b/src/components/data/index.module.scss
@@ -1,7 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&family=Ysabeau:wght@100&display=swap");
+
 .Data {
   margin: 30px;
   padding: 30px;
   background-color: #f2b9aca1;
+  font-family: "Ysabeau", sans-serif;
+  font-weight: bold;
 
   .dati {
     ul {
@@ -10,7 +14,7 @@
       gap: 10px;
       li {
         color: black;
-        font-size: 12pt;
+        font-size: 11pt;
         list-style-type: none;
         display: flex;
         gap: 10px;
