--- a/src/components/footer/index.module.scss
+++ b/src/components/footer/index.module.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&family=Ysabeau:wght@100&display=swap");
+
 .Footer {
   height: 100px;
   width: 100%;
@@ -6,6 +8,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: "Ysabeau", sans-serif;
+  font-weight: 600;
 }
 
 @media screen and (min-width: 768px) {
