--- a/src/components/form/index.module.scss
+++ b/src/components/form/index.module.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&family=Ysabeau:wght@100&display=swap");
+
 .Form {
   margin: 50px;
 
@@ -8,8 +10,10 @@
 
     input {
       padding: 2px 10px;
-      box-shadow: 1px 2px whitesmoke;
+      box-shadow: 1px 1px rgb(106, 106, 106);
       height: 50px;
+      font-family: "Ysabeau", sans-serif;
+      font-weight: 300;
     }
 
     .special {
@@ -19,6 +23,15 @@
     .submit {
       background-color: #8f6e76;
     }
+  }
+
+  input:hover {
+    cursor: pointer;
+    box-shadow: 1px 1px rgb(234, 234, 234);
+  }
+
+  .submit:hover {
+    background-color: #654f54;
   }
 }
 
