--- a/src/components/school/index.module.scss
+++ b/src/components/school/index.module.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&family=Ysabeau:wght@100&display=swap");
+
 .Schools {
   background-color: #f8dccfbc;
   color: black;
@@ -5,14 +7,17 @@
   padding: 30px;
   display: flex;
   flex-direction: row;
+  font-family: "Ysabeau", sans-serif;
+  font-weight: bold;
 
   .icons {
     ul {
       li {
         display: flex;
         flex-direction: column;
-        gap: 50px;
+        gap: 32px;
         padding: 10px 5px;
+        font-size: 13pt;
       }
     }
   }
@@ -20,7 +25,7 @@
     display: flex;
     flex-direction: column;
     li {
-      font-size: 13pt;
+      font-size: 11pt;
       display: flex;
       padding: 10px 0;
     }
