--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&family=Ysabeau:wght@100&display=swap");
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -5,6 +7,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+    font-family: "Playfair Display", serif;
+    font-family: "Ysabeau", sans-serif;
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
