--- a/src/components/school/index.module.scss
+++ b/src/components/school/index.module.scss
@@ -10,24 +10,16 @@
   font-family: "Ysabeau", sans-serif;
   font-weight: bold;
 
-  .icons {
-    ul {
-      li {
-        display: flex;
-        flex-direction: column;
-        gap: 32px;
-        padding: 10px 5px;
-        font-size: 13pt;
-      }
-    }
-  }
   ul {
     display: flex;
     flex-direction: column;
+    gap: 10px;
     li {
+      color: black;
       font-size: 11pt;
+      list-style-type: none;
       display: flex;
-      padding: 10px 0;
+      gap: 10px;
     }
   }
 }
