--- a/src/components/skillsTech/index.module.scss
+++ b/src/components/skillsTech/index.module.scss
@@ -1,6 +1,7 @@
 .Skills {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   margin: 30px;
   padding: 20px;
   background-color: #8f6e76;
@@ -13,17 +14,26 @@
 
     ul {
       display: flex;
-      gap: 20px;
+      gap: 15px;
+      padding-right: 10px;
+      border-right: 1px solid black;
 
-      li {
+      p {
         display: flex;
         justify-content: center;
+        align-items: center;
+        font-weight: 800;
+        gap: 5px;
+      }
+      li {
+        display: flex;
+        justify-content: flex-start;
         align-items: center;
         font-size: 25pt;
         list-style-type: none;
       }
       .special {
-        font-size: 40pt;
+        font-size: 30pt;
       }
     }
 
