--- a/src/components/data/index.module.scss
+++ b/src/components/data/index.module.scss
@@ -3,7 +3,7 @@
 .Data {
   margin: 30px;
   padding: 30px;
-  background-color: #f2b9aca1;
+  background-color: #8fbc8b;
   font-family: "Ysabeau", sans-serif;
   font-weight: bold;
 
