--- a/src/components/hero/index.module.scss
+++ b/src/components/hero/index.module.scss
@@ -3,8 +3,8 @@
 .Hero {
   width: 100%;
   padding: 10px;
-  background-color: #8f6e76;
-  color: black;
+  background-color: #014421;
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
