--- a/src/components/projects/index.module.scss
+++ b/src/components/projects/index.module.scss
@@ -11,7 +11,7 @@
   }
 
   .div {
-    background-color: #f8dccfbc;
+    background-color: #8fbc8b;
     color: black;
     display: flex;
     flex-direction: column;
@@ -33,7 +33,7 @@
     }
   }
   .div:hover {
-    background-color: #d5a49992;
+    background-color: #014d26;
     cursor: pointer;
   }
 }
