--- a/src/components/skillsTech/index.module.scss
+++ b/src/components/skillsTech/index.module.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   margin: 30px;
   padding: 20px;
-  background-color: #8f6e76;
+  background-color: #8fbc8b;
   color: black;
 
   .div {
