--- a/src/components/footer/index.module.scss
+++ b/src/components/footer/index.module.scss
@@ -3,8 +3,8 @@
 .Footer {
   height: 100px;
   width: 100%;
-  background-color: #8f6e76;
-  color: black;
+  background-color: #014421;
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
