--- a/src/components/school/index.module.scss
+++ b/src/components/school/index.module.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&family=Ysabeau:wght@100&display=swap");
 
 .Schools {
-  background-color: #f8dccfbc;
+  background-color: #8fbc8b;
   color: black;
   margin: 30px;
   padding: 30px;
